<resources>
    <string name="app_name">MapActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_label_1">Test</string>
    <string name="text_label_2">Test 2</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="landing_text_1">House Price Estimator</string>
    <string name="landing_text_2">Ready to explore?</string>
    <string name="signin_text_1">Let\'s Sign In</string>
    <string name="signin_text_2">glad to see you again</string>
    <string name="signin_text_3">Forgot password?</string>
    <string name="signin_text_4">Show password</string>
    <string name="signin_text_5">Don\'t have an account?</string>
    <string name="signin_text_6">Register</string>
    <string name="signin_text_7">Email</string>
    <string name="signin_text_8">Password</string>
    <string name="register_text_1">Create your account</string>
    <string name="register_text_2">it\'ll only take a few seconds</string>
    <string name="register_text_3">Show password</string>
    <string name="register_text_4">Full name</string>
    <string name="register_text_5">Email</string>
    <string name="register_text_6">Password</string>
    <string name="register_text_7">Register</string>
    <string name="register_text_8">Back</string>
    <string name="register_text_success">Registration Success!</string>
    <string name="toolbar_text_1">Map</string>
    <string name="toolbar_text_2">Price Estimate</string>
    <string name="toolbar_text_3">About</string>
    <string name="search_text_1">Find Location</string>
    <string name="search_text_2">Choose your location</string>
    <string name="search_text_3">Location detail</string>
    <string name="est_text_1">Latitude</string>
    <string name="est_text_2">Longitude</string>
    <string name="est_text_3">City</string>
    <string name="est_text_4">Home Size</string>
    <string name="est_text_5">Lot Size</string>
    <string name="est_text_6">square feet</string>
    <string name="est_text_7">Property Features</string>
    <string name="est_text_8">Bedroom</string>
    <string name="est_text_9">Bathroom</string>
    <string name="est_text_10">Estimate Price</string>
    <string name="est_text_11">Your Predicted House Price</string>
    <string name="about_text_1">FAQ</string>
    <string name="about_text_2">&amp;</string>
    <string name="about_text_3">Support</string>
    <string name="about_text_4">We have developed this app to help users in California check house prices using machine learning.</string>
    <string name="about_text_5">Visit our website</string>
    <string name="about_text_6">Email us</string>
    <string name="about_text_7">Our Team</string>
    <string name="about_text_8">Ramin Mousivand</string>
    <string name="about_text_9">Eugene Clewlow</string>
    <string name="about_text_10">Michael Hsieh</string>
    <string name="form_complete_all_fields">Please complete all fields.</string>
    <string name="map_not_found">Location not found.</string>
</resources>