<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/lato_bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/register_text_7"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:background="@drawable/roundcorner_2"
        android:drawableStart="@drawable/baseline_mail_outline_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/register_text_5"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundcorner_2"
        android:drawableStart="@drawable/baseline_lock_outline_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/register_text_6"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/register_text_1"
        android:textColor="@color/signin_text_1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_text_2"
        android:textColor="@color/signin_text_2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register_text_3"
        android:textColor="@color/signin_text_1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/register_text_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_chevron_left_black_24dp" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/roundcorner_2"
        android:drawableStart="@drawable/baseline_person_outline_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/register_text_4"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>