<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="156dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/about_text_1"
            android:textColor="@color/signin_text_1"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/website_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/about_text_5"
            android:textColor="@color/signin_text_1"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/website_button"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/about_text_8"
        android:textColor="@color/signin_text_1"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/about_text_9"
        android:textColor="@color/signin_text_1"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/splitLine_hor2" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/about_text_10"
            android:textColor="@color/signin_text_1"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/website_button"
            app:layout_constraintTop_toBottomOf="@+id/splitLine_hor3" />

    <TextView
        android:id="@+id/email_us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/about_text_6"
        android:textColor="@color/signin_text_1"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/website_button"
        app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor1" />

    <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/about_text_7"
            android:textColor="@color/signin_text_1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splitLine_hor" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/raleway"
            android:text="@string/about_text_4"
            android:textColor="@color/signin_text_1"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="156dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/about_text_3"
            android:textColor="@color/signin_text_1"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="156dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/about_text_2"
            android:textColor="@color/signin_text_1"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/SplitLine_hor1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="38dp"
            android:background="@color/quantum_bluegrey100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website_button" />

        <View
            android:id="@+id/splitLine_hor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="38dp"
            android:background="@color/quantum_bluegrey100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_us_button" />

        <View
            android:id="@+id/splitLine_hor2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="38dp"
            android:background="@color/quantum_bluegrey100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <View
            android:id="@+id/splitLine_hor3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="38dp"
            android:background="@color/quantum_bluegrey100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <View
            android:id="@+id/splitLine_hor4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="38dp"
            android:background="@color/quantum_bluegrey100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <ImageView
            android:id="@+id/website_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/circle_blue"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22"
            app:srcCompat="@drawable/globe" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/circle_blue"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_blue"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitLine_hor2" />

    <ImageView
            android:id="@+id/imageView13"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_blue"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splitLine_hor3" />

        <ImageView
            android:id="@+id/email_us_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle_blue"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor1"
            app:srcCompat="@drawable/baseline_mail_outline_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>