<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/roundcorner_green"
        android:fontFamily="@font/lato_bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/roundcorner_green"
        android:fontFamily="@font/lato_bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/landing_text_2"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/raleway"
        android:text="@string/landing_text_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="400dp"
        android:layout_height="284dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/house_1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            app:layout_column="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_row="0"
            app:srcCompat="@drawable/house_2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/house_3" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/house_4" />
    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>