<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="389dp"
        android:background="@drawable/roundcorner_4"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:padding="0dp"
        android:translationZ="20dp"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search_text_1" />

    <Button
        android:id="@+id/choose_your_location"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="@drawable/roundcorner_green"
        android:text="@string/search_text_2"
        android:textAllCaps="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_details_box"
        android:layout_width="371dp"
        android:layout_height="158dp"
        android:layout_above="@+id/choose_your_location"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/roundcorner_white"
        android:elevation="2dp"
        android:translationZ="20dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/search_text_3"
            android:textColor="@color/signin_text_1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_details"
            android:layout_width="231dp"
            android:layout_height="79dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/dm_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_wrapBehaviorInParent="horizontal_only"
            tools:text="Latitude: &lt;&gt;, Longitude: &lt;&gt;" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="65dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundcorner"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/baseline_place_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>